--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -17,6 +17,8 @@
 <link href="/stylesheets/bubbletip-IE.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 
+<%= render 'layouts/javascript_includes' %>
+
 <%= javascript_include_tag :defaults %>
 <%= javascript_include_tag  'jquery.jgrowl_minimized.js' %>
 <%= javascript_include_tag  'jquery.scrollTo-min' %>
