--- a/app/views/layouts/blank.html.erb
+++ b/app/views/layouts/blank.html.erb
@@ -20,6 +20,7 @@
 <link href="/stylesheets/bubbletip-IE.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 
+<%= render 'layouts/javascript_includes' %>
 
 <%= javascript_include_tag :defaults %>
 <%= javascript_include_tag  'jquery.jgrowl_minimized.js' %>
