--- a/app/views/layouts/help_sections.html.erb
+++ b/app/views/layouts/help_sections.html.erb
@@ -6,6 +6,9 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>HelpSections: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+
+  <%= render 'layouts/javascript_includes' %>
+
 </head>
 <body>
 
