--- a/app/views/layouts/gooey.html.erb
+++ b/app/views/layouts/gooey.html.erb
@@ -21,6 +21,8 @@
 <link href="/stylesheets/bubbletip-IE.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 
+<%= render 'layouts/javascript_includes' %>
+
 <%= javascript_include_tag :defaults %>
 <%= javascript_include_tag  'jquery.jgrowl_minimized' %>
 <%= javascript_include_tag  'jquery.scrollTo-min' %>
