--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -13,6 +13,8 @@
 <%= stylesheet_link_tag 'gt-rounded-corners.css' %>
 <%= stylesheet_link_tag 'jquery.fancybox-1.3.4' %>
 
+<%= render 'layouts/javascript_includes' %>
+
 <%= javascript_include_tag :defaults %>
 <%= javascript_include_tag  'jquery.scrollTo-min' %>
 <%= javascript_include_tag  'jquery.fancybox-1.3.4.pack' %>
