--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -147,17 +147,17 @@
 <ul>
   <li>
     <a id="refresh_data" onclick="refresh_local_data();return false;"  href="#" class="icon icon-refresh">
-      Refresh
+      <%= l('general.refresh').capitalize %>
     </a>
   </li>
   <li>
     <a id="new_request" onclick="new_item();return false;" href="#" class="icon icon-add">
-      New Item
+      <%= l('general.new_item').titleize %>
     </a>
   </li>
   <li>
     <a id="dash_key" onclick="return false;"  href="#"  class="top-help-tip icon icon-help">
-      Key
+      <%= l('general.key').capitalize %>
     </a>
   </li>
 </ul>
