--- a/app/views/help_sections/_show_popup.html.erb
+++ b/app/views/help_sections/_show_popup.html.erb
@@ -1,8 +1,10 @@
 <div id="help_section_container" style="display:none">
 <div class="help-section" id="help_section" style="margin-bottom:0;width:630px;">
 <h3><%= l("help_section_#{help_section.name}").split("|")[0] %></h3>
-<a href="#" onclick="$.fancybox.close(); return false;" class="help-section-link">Close</a>
-<%= link_to_remote "Don't show again", {:url => {:controller => :help_sections, :action => :dont_show, :id => help_section.id}}, {:class => "help-section-link", :onclick => "$.fancybox.close()"} %>
+<a href="#" onclick="$.fancybox.close(); return false;" class="help-section-link">
+  <%= l('general.close').capitalize %>
+</a>
+<%= link_to_remote l('general.dont_show_again').capitalize, {:url => {:controller => :help_sections, :action => :dont_show, :id => help_section.id}}, {:class => "help-section-link", :onclick => "$.fancybox.close()"} %>
 <div class="clear"></div>
 
 <p>
