--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -95,13 +95,11 @@
     </div>
 </div>
 
-<div id="ajax-indicator" style="display:none;"><span><%= l(:label_loading) %></span></div>
-
-<div id="center" style="align:center" align="center">
-<div id="footer">
-    Powered by <a href="http://BetterMeans.com" target="new">BetterMeans.com</a> <%= Date.today.year %>  <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="new">[cc] CreativeCommons Attribution-Share Alike</a>
-</div>
-</div>
+  <div id="ajax-indicator" style="display:none;">
+    <span><%= l(:label_loading) %></span>
+  </div>
+  <div id="center" style="align:center" align="center">
+  </div>
 
 </div>
 </body>
