add missing assigned_issues variable

--- a/app/views/my/blocks/_issuesassignedtome.html.erb
+++ b/app/views/my/blocks/_issuesassignedtome.html.erb
@@ -1,5 +1,5 @@
-<% if assigned_issues.length > 0 %>
+<% if @assigned_issues.length > 0 %>
 
-<%= render :partial => 'issues/list_very_simple', :locals => { :issues => assigned_issues } %>
+<%= render :partial => 'issues/list_very_simple', :locals => { :issues => @assigned_issues } %>
 
 <% end %>
