update sign up disclaimer a bit

--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -33,10 +33,11 @@
 <p><%= text_field 'user', 'mail' %></p>
 
 <p>
-  This service is offered with no assurances of security or stability. It is not
-  being actively maintained and likely has a number of security vulnerabilities.
-  By signing up, you acknowledge this, and agree not to hold the hoster of the
-  service accountable for any unauthorized breach of data.
+  This service is offered with no assurances of security or stability. It is
+  not being actively maintained and likely has a number of security
+  vulnerabilities. By signing up, you acknowledge this, and agree not to hold
+  the hoster of the service accountable for any unauthorized breach of data or
+  other damages caused by the use of this service.
 </p>
 
 <div class="gt-form-row">
