working to be able to integrate views in specs

--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -8,20 +8,12 @@
     <%= f.text_field :recipient_id %>
   </p>
   <p>
-    <%= f.label :partial_name %><br />
-    <%= f.text_field :partial_name %>
-  </p>
-  <p>
     <%= f.label :params %><br />
     <%= f.text_field :params %>
   </p>
   <p>
-    <%= f.label :response %><br />
-    <%= f.text_field :response %>
-  </p>
-  <p>
-    <%= f.label :expiration_date %><br />
-    <%= f.date_select :expiration_date %>
+    <%= f.label :expiration %><br />
+    <%= f.date_select :expiration %>
   </p>
   <p>
     <%= f.submit 'Create' %>
