more fixes to allow rendering views in specs

--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -4,23 +4,13 @@
 </p>
 
 <p>
-  <b>translation missing: en, field_partial_name:</b>
-  <%=h @notification.partial_name %>
-</p>
-
-<p>
   <b>translation missing: en, field_params:</b>
   <%=h @notification.params %>
 </p>
 
 <p>
-  <b>translation missing: en, field_response:</b>
-  <%=h @notification.response %>
-</p>
-
-<p>
   <b>translation missing: en, field_expiration_date:</b>
-  <%=h @notification.expiration_date %>
+  <%=h @notification.expiration %>
 </p>
 
 
